# agentic-ai-pg

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  test.ipynb
tutorials/langchain/: chatbot-inmemoryhistory.ipynb  chatbot.ipynb  chroma.ipynb  data-ingestion.ipynb  faiss.ipynb  genai-app-groq.ipynb  genai-app-ollama.py  huggingface-embeddings.ipynb  langservice-app.py  ollama-embedddings.ipynb  openai-embeddings.ipynb  openai.ipynb  simple-app.ipynb  vector-store-and-retrievers.ipynb
tutorials/langgraph/: chains-1.ipynb  chains-2.ipynb  chains.ipynb  chatbot-with-multiple-tools.ipynb  chatbot.ipynb  dataclass-state-schema.ipynb  evaluator-optimizer.ipynb  human-in-the-loop.ipynb  orchestrator-worker.ipynb  parallelization.ipynb  prompt-chaining.ipynb  pydatic-state-schema.ipynb  react-agent.ipynb  routing.ipynb  simple-graph.ipynb  streaming.ipynb
tutorials/rags/: adaptive-rag.ipynb  agentic-rag.ipynb  corrective-rag.ipynb
