[project]
name = "aai-pg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "bs4>=0.0.2",
    "jupyterlab>=4.4.4",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langgraph>=0.5.1",
    "pandas>=2.3.0",
    "pymupdf>=1.26.3",
    "pypdf>=5.7.0",
    "python-dotenv>=1.1.1",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
